# ttf-reader

./: .gitignore  CMakeLists.txt  README.md
include/misc/: data_read.h  ttf_types.h
include/tables/: table_cmap.h  table_directories.h  table_glyph.h  table_head.h  table_hhea.h  table_loca.h  table_maxp.h  table_name.h  table_offset_subtable.h
src/: main.c
src/misc/: data_read.c  ttf_types.c
src/tables/: table_cmap.c  table_directories.c  table_glyph.c  table_head.c  table_hhea.c  table_loca.c  table_maxp.c  table_name.c  table_offset_subtable.c
